--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,34 +1,32 @@
 ---
-title: 英国联合38国将俄侵乌暴行提交国际刑事法院
+title: 七哥非常担心台湾和国内的亲朋好友
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2101024/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101148/)
 
-**整理：围剿维尼熊
-编辑：Candy**
+文编：Hima
+听写：叮叮
+视频：七哥
 
-**【雅典娜快讯】，紧贴时代脉搏**
+2022-02-27直播摘录
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/03/诉俄.png)图片来源：雅典娜设计组
+中国人，说实在，为啥我七哥，这几天有时候想想国内的……我的同事、家人，我就不知道怎么好，我也没办法都弄出来。怎么让这些人呢？你像我的同事，我们的杨英，我最近老梦见她是吧，为什么？还戴着脚镣、手铐，就电子脚镣，五、六年，在里边待了三、四年，她一个财务会计，她上哪还去找工作去，是吧？中国人有多现实，哪有像西方人，还有个有勇敢的人士站出来，是吧？中国人是一面倒的懦弱自私、欺负弱小，杨英能有工作吗？她咋活呢？我们的原来的跟我创业的马成、杨克森、赵广东、吕涛，这高管都在监狱待了四、五年出来，现在他有过去跟着我混，都有个亿儿、八千万的、几千万的个人资产，但是你一旦这个东西发生以后，你这些钱不是钱了，你的钱不是钱了，他们咋活呀？是吧。还有我这些家人，哥哥、嫂子、侄子的，是吧？还有所有的这些亲人，你说我这同事、我这些裕达、盘古的这些老员工，被他们抢走了，都有点钱，但以后怎么活是吧？我愁这事情。
 
+另外一个确确实实担心，台湾我很多的这些朋友，你知道。台湾来了以后他们咋办？不都是有钱的，很多原来跟我认识的，都是台湾普普通通的，过得很稳定的日子，但战争一来他们咋办？你像李祖原大师都七、八十岁了，他说不出来咋办呢？在台湾，他那个人是个佛教徒，天真的跟孩子一样，是吧？你真要发生战争，他会很惨的，这是七哥担心的。
 
-根据大纪元2022年3月3日讯，英国和其它38个国家已将俄罗斯入侵乌克兰期间的暴行，正式提交给国际刑事法院（ICC）。
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
-据国际刑事法院的规则，成员国正式提告，意味着检察官在开始调查之前，不必得到国际刑事法院法官的批准。
+**关注我们**
 
-英国联合其它38国一同提交请求，成为了国际刑事法院历史上规模最大的一次。英国外交大臣莉斯·特拉斯（Liz Truss，港译卓慧思）表示迫切需要国际刑事法院调查俄罗斯的野蛮行径，追究那些应为此负责的人。英国将与盟国紧密合作，确保正义得到伸张。
+Discord 账号
 
-在英国和盟国的要求下，国际刑事法院检察官卡里姆·汗（Karim Khan）已积极开始对乌克兰战争进行调查。
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
-参考链接：[39国指俄侵乌涉暴行 国际刑事法庭展开调查](https://www.epochtimes.com/gb/22/3/3/n13617865.htm)
+Gettr 账号
 
-***发布：Candy***
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
