--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,47 +1,47 @@
 ---
-title: 浅谈俄乌战争的结局（上）
+title: 令人心碎的照片：乌克兰儿童在俄罗斯袭击中丧生
 ---
-`波士顿五月花农场` [轉載自GNews](https://gnews.org/zh-hans/2100968/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2101087/)
 
-作者：波士顿五月花 跟随战神
-![](https://assets.gnews.org/wp-content/uploads/2022/03/0010B776-F4E8-49ED-B56B-A033474E202D.jpg)
-2022年2月24日，俄罗斯发动了蓄谋已久的对乌战争，正式拉开了入侵乌克兰的序幕。
+据《纽约邮报网》(nypost.com) 作者：本·凯斯伦([Ben Kesslen](https://nypost.com/2022/02/27/tragic-photos-show-ukrainian-kids-killed-in-russian-attacks/?utm_source=twitter_sitebuttons&amp;utm_medium=site%20buttons&amp;utm_campaign=site%20buttons))，2022年2月27日报道：
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-308-e1646328307306.png)在乌克兰东部马里乌波尔，医护人员对一名炮击受伤的女孩进行心肺复苏。
+图片来源：美联社
+周日出现了一些在俄罗斯对乌克兰的战争中遇难的,最年轻受害者的令人心碎的图片。
 
-普京原本的计划是闪电战，准备在24小时或48小时拿下乌克兰首都基辅，斩首或活捉乌克兰总统泽连斯基，最差的效果是以俄军排山倒海之势吓跑现任总统泽连斯基，扶植一个早已经准备好的代理人成立乌克兰临时政府。然后迅速对世界宣布：乌克兰新政府成立，并请求俄罗斯军队帮助维持秩序。
+在来自乌克兰顿涅茨克地区马里乌波尔市的令人心碎的照片中，有一张救护人员奥列克桑德·科诺瓦洛夫(Oleksandr Konovalov)对一个在俄罗斯袭击平民时受伤后被送到市医院的小女孩进行心肺复苏的镜头，但却徒劳无功。在她旁边，一个浑身是血的成年人痛苦地蹲了下来。
 
-如果俄罗斯的闪电战成功，西方世界还在一片惊愕之中就完成了对乌克兰的占领。对已经形成的事实，美欧等西方国家也无可奈何。当然，惊恐后的美欧会对俄罗斯进行制裁，但是其力度和决心会大受影响，不过是出于道义和所谓的面子做做样子罢了，毕竟已经是生米成熟饭。
+更多照片显示，在马里乌波尔医院内，她被一队成年人包围着，拼命地想要挽救她年轻的生命。
 
-俄罗斯完全具备这样的客观条件，毕竟基辅离俄罗斯的边境最近处90公里，俄罗斯的大军早已在那里守候多日。这样短暂的距离再加上乌克兰一马平川的土地，为俄军机械化装甲军部队提供了便利条件。所以，24小时在基辅插上俄罗斯旗帜恐怕是俄军保守的估计。
+据《基辅独立报》报道，卫生部长维克多·利亚什科透露，她不幸成为迄今为止在战争中被杀害的16名儿童之一。
 
-计划是那么的完美，但现实却是如此的残酷。没想到俄军的进攻遭到了乌克兰军队的顽强阻击。不但没有斩首或活捉泽连斯基，就连将他吓跑的目的都没有达到。战争已经进行了一周，俄罗斯别说拿下基辅，就是连一个重要城市都没有占领。反倒是泽连斯基频频用手机现场直播，展示乌克兰人民抗击俄军的决心和意志，宣称自己和家人会坚守在基辅，与乌克兰同在！
+另一张照片拍摄了一些幸存者，其中包括一名妇女. 她手里抱着她的孩子和宠物狗，为了躲避街头战斗和城市中发生的冲突，她们挤进了马里乌波尔的一个避难所。
 
-俄罗斯停止战斗就不会有战争，乌克兰停止战斗就不会有乌克兰。这时，在全世界掀起了一个同情和钦佩乌克兰的巨大浪潮。一场非法的对一个主权国家肆意践踏的战争，遭到了世界正义国家和人民的坚决反对。美欧等国家迅速出台一系列制裁措施。包括将俄罗斯踢出SWIFT系统，制裁普京总统及核心团队人员，没收他们的游艇、豪华公寓和私人飞机，冻结俄罗斯寡头在美国的17万亿资产。
+利亚什科称俄罗斯军队以平民为目标,是“恐怖分子”。总统沃洛德米尔·泽伦斯基(Volodymyr Zelensky)称，俄罗斯人应该因犯下国际战争罪而被审判。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-309-e1646328358247.png)奥列克桑德·科诺瓦洛夫(Oleksandr Konovalov)试图抢救这个年轻女孩，但她随后不幸死亡。
+图片来源：美联社(AP)![](https://assets.gnews.org/wp-content/uploads/2022/03/image-310-e1646328403190.png)到目前为止，已有16名儿童在战争中丧生。
+图片来源：美联社(AP)![](https://assets.gnews.org/wp-content/uploads/2022/03/image-311-e1646328445134.png)年轻的女孩被一队成年人包围着，拼命地想挽救她的生命。
+图片来源：美联社(AP)
+周末，乌克兰各地的战斗仍在继续。俄罗斯总统弗拉基米尔·普京(Vladimir Putin)周日下令将该国的核武系统置于高度警戒状态，因此看不到明确的结束迹象。
 
-虽然美欧国家并没有出兵参战，但是各种武器弹药的支持源源不断地送往乌克兰。同时，来自世界各国的勇士们自愿组成志愿军奔赴乌克兰战场，他们大部分是训练有素的退役军人。志愿军人数每天以几千人的数量增加。
+一些最激烈的战斗发生在哈尔科夫市。当地乌克兰官员周日宣布了胜利。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-313-e1646328487440.png)女孩，俄罗斯炮击的受害者。图片来源：美联社![](https://assets.gnews.org/wp-content/uploads/2022/03/image-314-e1646328528208.png)卫生部长利亚什科（Viktor Lyashko）称俄罗斯军队以平民为目标是“恐怖主义者”。
+图片来源：美联社![](https://assets.gnews.org/wp-content/uploads/2022/03/image-315-e1646328568120.png)一名妇女抱着她的孩子和宠物狗挤进马里乌波尔的一个收容所。
+图片来源：美联社
+原文连接：[https://nypost.com/2022/02/27/tragic-photos-show-ukrainian-kids-killed-in-russian-attacks/?utm\_source=twitter\_sitebuttons&utm\_medium=site%20buttons&utm\_campaign=site%20buttons](https://nypost.com/2022/02/27/tragic-photos-show-ukrainian-kids-killed-in-russian-attacks/?utm_source=twitter_sitebuttons&amp;utm_medium=site%20buttons&amp;utm_campaign=site%20buttons)
 
-得道多助失道寡助，在俄乌战争体现的淋漓尽致。随着俄军的大幅受挫，普京大帝恼羞成怒，竟然失去理智地发出核威胁。这既让世人恐惧更让人们清醒。与世界上的邪恶和黑暗是无法和解和共处的，最好的办法是让他们去见上帝。
+翻译：洛杉矶盘古农场 – TrueSky
 
-闪电战的失败，让俄罗斯深深地陷在战争的泥潭中。巨额的战争费用、俄军的厌战情绪、强大的反战声音、核心团队的分裂都成为了普京的敌人。随着时间的推移和美欧的制裁加剧，普京的悲剧已经注定，俄军的失败已成定局。
+校对：洛杉矶盘古农场 – Freeearth
 
-普京面临的最大威胁就是核心团队的分崩离析。那些曾经“亲密无间”的部下和女友，那些曾经获得巨额财富的“亲信”，为了保护将要失去的财富和生命，随时可能“出卖”普京，甚至成为普京生命的终结者。毕竟，在外部的巨大压力下，引起内部的巨大变化已经被历史一次次证明。
+编辑：洛杉矶盘古农场 – WenXiong
 
-据文贵先生爆料，普京的身体状况堪忧，有可能无法撑过2022年。而一个即将与死神为伍的人或许会做出疯狂的举动。“锁链女”悲凉地说：这个世界不要俺了，普京却在酝酿“俺不要这个世界了”。
+发布：洛杉矶盘古农场–子萍
 
-几天前，普京的核威胁言论已经引起世界的高度警惕。但是，核弹发射也不是瞬间完成的。从按下核按钮的那一刻，到洲际导弹发射至少需要40分钟。文贵先生告诉我们，从太空打击到瘫痪核弹只需30秒，时间是发射核弹的八十分之一。所以，从按下核按钮的那一刻起可以摧毁核弹80次。
 
-如果能够确认普京将要与世界同归于尽，美欧会先发之人，毫不犹豫地实施斩首行动。毕竟让文明延续、让人类生存是每个国家、每个正常人责无旁贷的职责。
+[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
+洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
-后普京时代的俄罗斯面临着再次解体的命运。地域庞大的俄罗斯分裂成若干个独立的、不再拥有核武器的国家符合世界各国人民的利益，也是俄罗斯人民能够过上稳定、美好生活的开始。
-
-至于俄乌战争与中共的关联和影响，将在下一篇文章中阐述。
-
-* * *
-
-*编辑：文合*
-
-*封面：水涨船高*
-
-*发布：吐纳*
+[https://discord.gg/2vuvRm7z6U+2](https://discord.gg/2vuvRm7z6U+2)
 
  
 
