--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,44 +1,45 @@
 ---
-title: 德国人扣押俄罗斯亿万富翁阿利舍尔·乌斯马诺夫的巨型游艇
+title: 人道主义救援志愿者的重要性和基本素养
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2101291/)
+`喜马拉雅德国纽伦堡正义农场` [轉載自GNews](https://gnews.org/zh-hans/2101342/)
 
-***评论：****对俄罗斯进行swift制裁，对其亿万富豪扣押海外的个人资产如私人飞机，游艇，豪华公寓等，让他们切身利益受到直接的重大损失，最早来自于新中国联邦爆料革命创始人郭文贵先生的提法，如今，一切都在按照郭先生的剧本在走。*
+供稿：9Lights
+编辑发稿：am夏天
+德国纽伦堡正义农场
 
-据《Forbes》记者 Giacomo Tognini 2022年3月2日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-318-e1646332311374.png)Alisher Usmanov 的 Dilbar 游艇。 盖蒂图片社
-俄罗斯亿万富翁阿利舍尔·乌斯马诺夫（Alisher Usmanov）周一受到欧盟的制裁。两天后，《福布斯》从游艇行业的三个消息来源获悉，他的一件珍贵财产—价值近 6 亿美元的 512 英尺长的 Dilbar 游艇—已在北部城市汉堡被德国当局没收。
+“如果我们不做，谁来做？”
 
-自 10 月下旬以来，这艘船一直在德国造船公司布洛姆－福斯的汉堡造船厂进行改装工作。与《福布斯》交谈的消息人士称，德国政府冻结了该资产，可能因此，在游艇上工作的布洛姆－福斯员工周三没有上班。布洛姆－福斯和乌斯马诺夫的代表没有立即回应置评请求。
-
-据报道，乌斯马诺夫在 2016 年以 6 亿美元的价格从德国造船厂 Lürssen 手中收购了 Dilbar，Lürssen 为他定制了 52 个月。该公司称其为“就尺寸和技术而言，有史以来建造的最复杂和最具挑战性的游艇之一”。它重 15,917 吨，是世界上总吨位最大的机动游艇，通常由 96 名船员驾驶。Dilbar拥有有史以来安装在游艇上的最大游泳池以及两个直升机停机坪、桑拿浴室、美容院和健身房。其豪华的内饰有 1,000 多个沙发垫，12 间套房最多可容纳 24 人。
-
-这艘游艇是乌斯马诺夫估计数十亿美元财富的一部分，其中包括铁矿石和钢铁巨头 Metalloinvest 和消费电子公司小米的股份，以及在电信、采矿和媒体方面的较小股份。作为 Facebook 最早的投资者之一，与亿万富翁尤里·米尔纳（Yuri Milner ）一起，乌斯马诺夫还在西方拥有大量房地产资产，包括英国的两处房产——伦敦的 Beechwood House 和萨里的 Sutton Place，总价值为 2.8 亿美元——去德国慕尼黑的豪宅，瑞士洛桑，摩纳哥，和撒丁岛。
-
-乌斯马诺夫在 2018 年以近 7 亿美元的现金出售了他在英格兰足球队阿森纳足球俱乐部 30% 的股份，但直到本周之前，他还通过他的 USM 控股公司和埃弗顿足球俱乐部的 MegaFon 赞助与足球有联系。英超球队周三表示，鉴于俄罗斯袭击乌克，将暂停这一安排。乌斯马诺夫并不是唯一拥有巨型游艇的俄罗斯亿万富翁：《福布斯》和游艇估值专家 VesselsValue追踪了其中的 32 位。
-
-周二，乌斯马诺夫在给国际击剑联合会的一份声明中评论了欧盟对他实施的制裁，他还宣布辞去该组织主席的职务。他写道：“我认为这样的决定是不公平的，用来为制裁辩护的理由是一系列损害我的荣誉、尊严和商业声誉的虚假和诽谤指控。”“我将使用一切法律手段保护我的荣誉和声誉。”
-
-文章观点仅代表作者个人，与Gnews平台无关。
-
-文章来源： [https://www.forbes.com/sites/giacomotognini/2022/03/02/germans-seize-russian-billionaire-alisher-usmanovs-mega-yacht/?sh=658364cb52dd](https://www.forbes.com/sites/giacomotognini/2022/03/02/germans-seize-russian-billionaire-alisher-usmanovs-mega-yacht/?sh=658364cb52dd)
-
-翻译：洛杉矶盘古农场 – Raul
-
-校对：洛杉矶盘古农场 – 轰炸机
-
-评论：洛杉矶盘古农场 – 傻小子
-
-编辑：洛杉矶盘古农场 – 傻小子
-
-发布：洛杉矶盘古农场 – 子萍
+目前有超过1.67亿人需要人道主义援助。全球人道主义的预算中有一半是经费不足的。  志愿者仍然是应对危机的重要资源。他们在受灾害影响的地区拯救生命，在COVID-19大流行期间建立地方系统，为最脆弱的人提供食物和服务。他们中的大多数是当地的志愿者，在自己的社区工作。
+规划和准备工作
+自发组织的志愿团体和个人，通常被称为”自发的志愿者”，在紧急应对灾难和拯救生命方面发挥着关键作用。
+例如，在中国的唐山地震中，大约80%的幸存者是由自发的志愿者拯救的，他们能够迅速地自我动员起来。
+在国际援助机构的准入受到限制的情况下，当地救援参与者往往被视为特别重要。然而，即使在这些环境中，当地志愿者也很少直接参与人道主义规划和准备工作。
+志愿者和其他行为者之间的协调
 
 
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
+```
+在志愿者和其他救援参与者之间建立明确的协调措施，从而做出迅速、高效和创新性的反应是至关重要的。
+有证据表明，这需要更多包容性的灾害管理模式，以加强社区内现有的能力和复原力。
+应急管理者要想实现时间效率，不仅要评估如何将自发的志愿者安置在适当的角色中，而且要开发管理技术，指导他们在这些角色中遵循有效志愿服务的关键原则
+```
 
-[https://discord.gg/2vuvRm7z6U+20](https://discord.gg/2vuvRm7z6U+20)
 
+志愿者的观点
+
+社区内的接触、信任和融合是人道主义有效性的基本要素。 
+然而，事实证明人道主义志愿者的实际经验是有限的。冲突和紧急情况志愿服务行动（ViCE）最近的研究发现，由于当地志愿者是人道主义反应的核心，他们的安全、保障和福祉经常面临风险。
+由于许多”志愿者”本身也是”受害者”，他们作为这些社区的成员，在工作中面临着管理当地紧张局势的不确定性，同时也要遵守人道主义原则。”然后我清醒过来，说我怎么了？我也是脆弱的。我也可能是一个受害者。戴着救援志愿者徽章并不代表自己就能毫无顾忌的往前冲”（冲突地区的女性志愿者）。
+
+性别与包容
+
+不同的群体在危机中具有不同的抗压能力，需要因地制宜地动员和支持他们。 
+在孟加拉国，事实证明，妇女和边缘群体的自愿参与，不仅减少了死亡率的性别差距，而且促进了社区的动员更加包容。。
+
+加强对冲击的抵御能力
+
+社区志愿者不仅是紧急情况下的”第一响应者”，而且在外部援助离开后仍长期存在，帮助加强该地区应对冲击的能力。因此，他们有效地充当了人道主义行动和可持续发展之间的纽带。
+研究已经逐渐转向了解地方的能力，以及如何利用这些能力进行有效互动，通过人道主义-发展-和平的关系推动可持续行动。 这是基于”自身免疫力的人道主义”的概念，即危机响应要”考虑到人们的响应、适应和恢复的能力”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/德农二维码-30.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
