--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,23 +1,36 @@
 ---
-title: 新中国联邦乌克兰救援行动初获胜果
+title: 有声&#124;得克萨斯州长要求商店停止销售俄罗斯产品
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2100725/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2100791/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+美国媒体3月1日报道，美国得克萨斯州州长格雷格·阿博特正在敦促该州的商店和零售商下架俄罗斯制造的产品，要求酒吧停止出售来自俄罗斯的伏特加，以示与乌克兰的团结。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/9-4-scaled.jpg)
+在过去的一周里，全世界都目睹了俄罗斯进军乌克兰，勇敢的乌克兰人民一直在为阻止入侵不懈战斗。得州州长的行为虽然不可能对俄罗斯造成致命得打击，但强烈地表达了该州对于这场冲突的立场。
 
-采编/编辑撰稿：硫酸羟氯喹64
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-304.png)图片来源：GTV 
-据3月2日GTV文贵大直播消息，本次由新中国联邦主导参与的“乌克兰国际人道救援行动”捷报频传，不仅向世界展示了爆料革命强大的执行力和国际影响力，更体现出新中国联邦人在果敢行动中实现“灭共是正义需要”的宗旨。
+同时，得州禁止销售的某些俄罗斯产品，也可能会在国家其他大规模制裁的基础上进一步削弱俄罗斯的海外收入。
 
-据悉，新中国联邦目前已成功在乌克兰战火中救出了至少四位爆料革命资深战友及其家人和朋友，并已全部安全抵达波兰。
 
-同时，喜马拉雅联盟委员会负责人大卫和老班长及相关战友团队都已准备就绪飞赴乌克兰和波兰，并计划在匈牙利、罗马尼亚建立营救基地。
 
-此外，新中国联邦与联合国救援组织将与当地国军方合作，全力营救被困华人，整个救援过程不需要提供任何个人信息。在成功进入波兰后，将直接入驻联合国指定酒店，享受30天免费食宿。最后，按被救助者个人意愿，提供免费航班飞往指定的安全国家。
+文字版原文：[得克萨斯州长要求商店停止销售俄罗斯产品](https://gnews.org/zh-hans/2098841/)
 
-发稿：青青
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-8.png)
+**更多资讯，更多关注**
 
-消息来源：https://gtv.org/video/id=621f6ab7019ef64da653b4fe
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
