--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,32 +1,48 @@
 ---
-title: 帕克代尔租户在整栋大楼收到驱逐通知后进行反击
+title: 随着多伦多市场炙手可热，这对夫妇套现并搬到了位于蒙特朗布朗的一座价值 120 万元的豪宅
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101268/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101326/)
 
-作者：DH Toronto Staff
+作者：Andrea Yu
 翻译：HimaCoby
-![](https://assets.gnews.org/wp-content/uploads/2022/03/22_1J94L09.png)
-日前位于多伦多一栋公寓楼的租客们因为收到业主的驱逐令而倍感不满，他们一致行动，向房东进行反击。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/22_13320V96.png)
+来自安省Oakville的一对夫妇近期想要换房，但多伦多周围楼市火热，他们就把目光投向了其他地方。
 
-这栋位于多伦多市12 Landsdowne Avenue。楼内的每位居民近日都收到了房东12 Landsdowne Inc.公司发出的N13搬迁通知。
+56岁的杂志出版人John Thomson和53岁的时尚顾问兼健身教练Cathy Thomson在2009年时花64万元，买下Oakville市中心一套带三居室两间半浴室的镇屋。
 
-通常这些驱逐令是在房东要给房子进行维护和装修时使用。等到这些维修工程竣工之后，房东们也要以跟装修前差不多的租金水平，再把房子租回给这些租客。但是这栋楼的居民担心他们搬走以后事情就不一样了。
+当时他们俩的女儿Savannah和Melody都在读中学。他们一家人经常往返于Oakville和Beaver Valley生活。两人早在2005年时就在Beaver Valley买下了一间900平方尺的小木屋。
 
-接到驱逐通知后，租客们就很担心会成为房子重装的受害者，因为他们的房东此前就因为类似的事情被罚款过。
+到了2019年时，他们越发感觉到这间小木屋对于他们一家子来说太挤了，特别是当女儿们长大后想邀请好友们来的时候就不够住了。
 
-租客和住房维权者表示，这家公司的所有者Neil Spiegel和Evan Johnsen曾经有过利用安省房东与租客法律漏洞的记录。
+于是他们两夫妻在2019年3月以近40万元卖了这栋小木屋，并打算于2020年时再买一栋大一点的度假屋，但没想到发生了疫情，安省各地的度假屋都大幅涨价。
 
-作为12 lansdowne Inc.的负责人，Spiegel和Johnsen曾在2019年因为不当驱逐租客被罚款过两次。2017年时，他们也曾给795 College Street楼内的租客发出N13通知令，但租客搬走、装修完成之后，他们大幅抬高了租金。最终他们也因此被罚了13万5000元。但是这些钱并没有被补偿给遭到不公正驱逐的租客们。
+2020年夏天的时候，John发现自己的工作完全可以居家办公，而Cathy的大部分工作也通过视频会议进行。这时候他们俩的女儿也都已经高中毕业，去了Oakville以外的地方学习生活，因此两人不再需要住在Oakville市区里了。
 
-对于此事，Spiegel回应称，这次的情况不会重蹈College Street装修事件的覆辙。
+于是他们计划着卖掉镇屋并永久地搬到更大一点的度假屋生活，女儿和她们的朋友们或其他家人都可以来玩。
 
-但租客们对这种说法并不买账。近期他们在社区附近张贴了多张海报，申诉自己的处境，并要求房东放弃驱逐令。
+在2021年夏季的时候，John和Cathy在翠湖山庄（Mont-Tremblant）租了一栋农场屋边工作边度假。这段期间里，他们爱上了附近的生活和自然环境，周边的餐馆和商店也让他们很满意。
 
-租客们在海报上把房东描绘为蟑螂并写道，“Parkdale有虫害问题。”
+他们做了200万元左右的买房预算，因为他们预估在Oakville的房子大概可以卖到这个价钱。而且这个地方的楼市和安省相比没有那么火，同样的价格可以买到更好的房子。
 
-他们也呼吁当地居民联络房东，要求他们终止驱逐令。
+去年8月，他们回到Oakville并给在翠湖山庄的一套房子下了offer。
 
-来源：https://dailyhive.com/toronto/parkdale-tenants-eviction-notices
+这是一套3800平方尺大的新建独立屋，带四室三卫，周围土地面积有两英亩。这个地方原先是一个滑雪道，旁边紧邻一个小湖Lac Bobby。
+
+这套新房的风格属于现代北欧风，主卧和次卧在楼上，一楼有家庭室和另外两间卧室，还有一个全套卫浴、一个储藏间和另外一个露台。房子还设有一个盥洗间，可以通往双车库。
+
+此外，这套房子还有一间桑拿房，到附近的滑雪山庄只要5分钟车程，开车3分钟可抵达高尔夫球场。
+
+这套房子叫价169万5000元，已挂牌上市了3个月。因此他们俩认为也许有讲价空间。于是他们出价105万元，卖家又提出119万5000元的售价，两人也接受了这个价位。
+
+后来他们把在Oakville的镇屋以199万9999元挂牌上市，不到6个小时就有人出价200万，他们俩便接受了这个offer。
+
+搬到翠湖山庄生活以后，他们经常邀请亲友来做客。女儿Savannah在多伦多工作和生活，她会每个月来探望两夫妻一次。另一个女儿从厨师学院毕业后搬来与他们俩一起生活，并在附近的一家餐馆任厨师。
+
+他们俩表示，很喜欢周围的生活环境。John每周至少会去滑雪三次，也会经常到附近的郊外散步。虽然他们也想念在Oakville的社交圈，但在这里他们也结识了新朋友。
+
+搬到新家五个月后，他们俩始终不敢相信真的住进了梦想中的房子。Cathy表示，“这里真是好。”
+
+来源：https://torontolife.com/real-estate/with-the-toronto-market-scorching-hot-this-couple-cashed-out-and-moved-to-a-1-2-million-chalet-in-mont-tremblant/
 
 **免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
 ![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
