--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,45 +1,44 @@
 ---
-title: 加拿大向俄罗斯和白俄罗斯征收35%关税
+title: 俄军进行无差别攻击造成2000多平民死亡
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101243/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101309/)
 
-作者：Aaron D’Andrea
-翻译：HimaCoby
-![](https://assets.gnews.org/wp-content/uploads/2022/03/5_095443K1.jpg)
-随着俄罗斯在乌克兰的战争愈演愈烈，加拿大对俄罗斯的制裁也步步紧逼，最新制裁是对来自俄罗斯和白俄罗斯的商品征收35%的关税，这项处罚也是加拿大及其盟国针对俄罗斯入侵其民主邻国采取的一系列措施中的最新一项。
+**撰稿：温哥华圆成农场 文明志**
 
-加拿大副总理Chrystia Freeland在渥太华举行的新闻发布会上告诉记者，根据世界贸易组织（WTO）的规定，加拿大联邦政府正在撤销俄罗斯和白俄罗斯作为最惠国贸易伙伴的地位。
+据3月3日读卖新闻驻莫斯科和华盛顿特派记者综合报道，2日，入侵乌克兰的俄罗斯军队袭击了哈尔科夫东部的大学和警察局。 对非军事设施的袭击开始增加，包括允许俄军导弹袭击首都基辅的电视塔。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-319.png)图片来源：[YOL読売新聞](https://www.yomiuri.co.jp/s/ims/RussiaUkraineKyiv/?from=yhd)
+从俄罗斯入侵开始，对居民区的破坏正在扩大，乌克兰政府2日宣布，已有2000多名平民在袭击中丧生。
 
-此前朝鲜是唯一一个不享有与加拿大成为最惠国贸易伙伴的国家。
+据英国BBC等报道，2日哈尔科夫市中心的政府机关每天都受到导弹袭击。 有一种观点认为，其目的是使城市功能瘫痪。 市政府官员昨天宣布，在过去 24 小时内，已有 21 人死亡，112 人受伤。 还有消息称俄罗斯地面部队已进入该市。
 
-Freeland说，我们正在与我们的合作伙伴和盟友密切合作，鼓励他们采取同样的步骤。简单地说，这意味着俄罗斯和白俄罗斯将不再获得加拿大向其他世贸组织成员国提供的低关税好处。
+另据报道，俄军1日晚向基辅市电视塔发射了两枚导弹，这次袭击造成五人死亡，五人受伤，电视广播暂停播放。俄罗斯国防部2日在公告中承认了这次袭击，称“电视塔被毁，但房屋没有损坏”。俄罗斯国防部此举拟摧毁基辅的信息相关设施以应对跟乌克兰的信息战。 由此看来，今后俄军对乌克兰非军事设施的不分青红皂白的袭击可能会继续增加。
 
-加拿大国防部长Anita Anand说，加拿大将向乌克兰提供额外的致命武器援助，包括多达 4,500枚M72火箭发射器和多达7,500枚手榴弹。
+基辅电视塔附近的一座纪念大屠杀（纳粹德国屠杀犹太人）遇难者设施也因袭击而受损。 乌克兰总统泽连斯基在推特上指责这是希特勒二战的“历史重演”，通过将普京与纳粹德国相提并论来批评普京的侵略。
 
-加拿大还将向乌克兰提供100万元用于购买高分辨率现代卫星图像。
+在日托米尔西部，2日，空军设施附近的几所房屋遭到轰炸，造成2人死亡，16人受伤。
 
-自乌克兰全面战争开始以来的一周内，加拿大及其盟国对俄罗斯实施了多项制裁，并承诺采取行动阻止莫斯科进一步升级冲突。
+俄罗斯军队也在攻击面向黑海的乌克兰南部。 五角大楼2日宣布，俄军已经“完全控制”了人口约30万的南部重要城市赫尔松市中心。 乌方对此予以否认，看来激战还在继续。
 
-面对国际制裁俄罗斯总统普京告诉法国总统马克龙，俄罗斯在乌克兰的行动目标——非军事化和中立地位——无论如何都将实现。
+关于港口城市马里乌波尔的情况，市长向当地电视台解释说，“由于俄军不断的袭击，造成了很多人的伤亡”。
 
-在周一谈判未能取得任何突破后，乌克兰和俄罗斯之间的第二轮停火谈判定于周四开始。
+截至2日下午，对基辅的全面进攻尚未展开。 美国国防部一名高级官员昨天表示，俄罗斯军队在基辅以北约 25 公里处停滞不前。他还指出俄军缺乏燃料和食物，并表示俄军可能推迟了行进，以重新获得阵地。
 
-来源：https://globalnews.ca/news/8656153/canada-russia-belarus-tariffs-ukraine-war/
+美国还表示，俄军在乌克兰周边集结的部队80%以上已被投入乌克兰。
 
-**免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+另一方面，2日俄罗斯和乌克兰的停火谈判无疾而终。在此之前，乌克兰总统泽连斯基先生表示，“只要轰炸还在发生，我们就不会对会谈作出回应”。
 
-**关注我们**
+**消息来源：
+**[Yahoo：都市機能マヒ狙うロシア、無差別攻撃増える可能性…ウクライナ政府「民間人２千人以上が死亡」](https://news.yahoo.co.jp/articles/5cbf58c216bd8d0af1a8c7fdbad9fe361f19b4e8)
 
-Discord 账号
+**编辑：LILY**
 
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
+**发布：MQ**
 
-Gettr 账号
+20220303
 
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
