--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,38 +1,75 @@
 ---
-title: 俄军进行无差别攻击造成2000多平民死亡
+title: 一旦中共武力侵占台湾，海外粉红有脸见人吗？现在普京对乌克兰动武，俄罗斯出生的魁北克人对自己的祖国（俄罗斯）感到&#8221;羞耻&#8221;
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101309/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101344/)
 
-**撰稿：温哥华圆成农场 文明志**
+**编译及评论：16626**
 
-据3月3日读卖新闻驻莫斯科和华盛顿特派记者综合报道，2日，入侵乌克兰的俄罗斯军队袭击了哈尔科夫东部的大学和警察局。 对非军事设施的袭击开始增加，包括允许俄军导弹袭击首都基辅的电视塔。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-319.png)图片来源：[YOL読売新聞](https://www.yomiuri.co.jp/s/ims/RussiaUkraineKyiv/?from=yhd)
-从俄罗斯入侵开始，对居民区的破坏正在扩大，乌克兰政府2日宣布，已有2000多名平民在袭击中丧生。
+**对祖国的热爱和对祖国发动战争感到的”耻辱”**
 
-据英国BBC等报道，2日哈尔科夫市中心的政府机关每天都受到导弹袭击。 有一种观点认为，其目的是使城市功能瘫痪。 市政府官员昨天宣布，在过去 24 小时内，已有 21 人死亡，112 人受伤。 还有消息称俄罗斯地面部队已进入该市。
+俄罗斯裔魁北克人对祖国（俄罗斯）入侵乌克兰的决定感到不满，困惑于：对祖国的热爱和对祖国发动战争感到的”耻辱”之间。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/4AEA9FF9-3A21-43AF-9503-697B9B5EEA71.png)**图片来源：截屏于**[**https://www.tvanouvelles.ca/2022/02/26/des-quebecois-nes-en-russie-ont-honte-de-leur-pays-dorigine**](https://www.tvanouvelles.ca/2022/02/26/des-quebecois-nes-en-russie-ont-honte-de-leur-pays-dorigine)
+**玛丽娜·莫诺索娃****Marina Monossova.**
 
-另据报道，俄军1日晚向基辅市电视塔发射了两枚导弹，这次袭击造成五人死亡，五人受伤，电视广播暂停播放。俄罗斯国防部2日在公告中承认了这次袭击，称“电视塔被毁，但房屋没有损坏”。俄罗斯国防部此举拟摧毁基辅的信息相关设施以应对跟乌克兰的信息战。 由此看来，今后俄军对乌克兰非军事设施的不分青红皂白的袭击可能会继续增加。
+“我的祖国（俄罗斯）在做这种事，这让我处于一种（心理）冲突的状态。（我）有愤怒，羞耻，内疚的感觉”，玛丽娜·莫诺索娃Marina Monossova说。自从俄罗斯周三早上袭击乌克兰以来，（这位）被收养的蒙特利尔人一直无法进入正常的睡眠和专注的工作状态。
 
-基辅电视塔附近的一座纪念大屠杀（纳粹德国屠杀犹太人）遇难者设施也因袭击而受损。 乌克兰总统泽连斯基在推特上指责这是希特勒二战的“历史重演”，通过将普京与纳粹德国相提并论来批评普京的侵略。
+**一位51岁的老人**
 
-在日托米尔西部，2日，空军设施附近的几所房屋遭到轰炸，造成2人死亡，16人受伤。
+一位51岁的老人，于2002年与丈夫一起从莫斯科移民到加拿大，一直对弗拉基米尔·普京Vladimir Poutine持怀疑态度，正是由于俄罗斯总统，她当时决定离开这个国家。
 
-俄罗斯军队也在攻击面向黑海的乌克兰南部。 五角大楼2日宣布，俄军已经“完全控制”了人口约30万的南部重要城市赫尔松市中心。 乌方对此予以否认，看来激战还在继续。
+“爱你的国家，你的（国家的）文化，并自豪地谈论它（你的国家），是正常的” ，她说，但她认为从现在开始（让我）这样做太难了。
 
-关于港口城市马里乌波尔的情况，市长向当地电视台解释说，“由于俄军不断的袭击，造成了很多人的伤亡”。
+**俄罗斯人，但反对普京 **
 
-截至2日下午，对基辅的全面进攻尚未展开。 美国国防部一名高级官员昨天表示，俄罗斯军队在基辅以北约 25 公里处停滞不前。他还指出俄军缺乏燃料和食物，并表示俄军可能推迟了行进，以重新获得阵地。
+**27岁的达里亚·西蒙诺娃（Darya Simonova）**
 
-美国还表示，俄军在乌克兰周边集结的部队80%以上已被投入乌克兰。
+27岁的达里亚·西蒙诺娃（Darya Simonova）最近几天也感到”羞耻”。
 
-另一方面，2日俄罗斯和乌克兰的停火谈判无疾而终。在此之前，乌克兰总统泽连斯基先生表示，“只要轰炸还在发生，我们就不会对会谈作出回应”。
+“我非常难过”。
 
-**消息来源：
-**[Yahoo：都市機能マヒ狙うロシア、無差別攻撃増える可能性…ウクライナ政府「民間人２千人以上が死亡」](https://news.yahoo.co.jp/articles/5cbf58c216bd8d0af1a8c7fdbad9fe361f19b4e8)
+“我希望魁北克人不要责怪我们（以及居住在魁北克的俄罗斯社区的俄罗斯人），并要求（魁北克）政府帮助乌克兰人”。这位女子，出生于西伯利亚，于2016年移民到加拿大，她反对普京政权。
+
+“最大的问题是我们不敢站起来（反抗）”，她还说。她强调，在最近反对俄罗斯战争的示威期间（俄罗斯）发生了大规模逮捕事件。我们的政府正在做的错误的事情，这不是我们的错，但是我们有责任，因为我们让（助长，没有制止）它发生。
+
+**名：瓦迪姆****Vadim，****姓氏：保密**
+
+瓦迪姆，他不想透露自己的姓氏，原因是他担心他的仍然在俄罗斯家人会遭到（俄罗斯政府）报复。
+
+“我担心（魁北克）人会怀疑我（对我怀有警惕和戒备之心），因为我是俄罗斯人”，他说。
+
+这位来自圣彼得堡地区Saint-Pétersbourg的40岁男子担心他将无法在俄罗斯再次见到他的家人，因为他不想（回到俄罗斯）成为俄罗斯军队的一员。
+
+日前，Gnews发表一篇题为《俄罗斯裔蒙特利尔人对普金入侵乌克兰的反应，[https://gnews.org/zh-hans/2093067/](https://gnews.org/zh-hans/2093067/)  》的文章报道，来自俄罗斯的蒙特利尔居民德米特里·别利亚伊科夫（Dmitry Belyaykov）说，这场战争不是俄罗斯和乌克兰之间的战争，而是“普京先生（本人）对俄罗斯人和乌克兰人的战争”。这篇文章还包括一个视频报道。在这段视频中，新闻主持人报道了前线记者（伊丽莎白·拉普兰特Elizabeth Laplante）采访两位俄罗斯裔蒙特利尔居民。
+
+**一旦中共武力侵占台湾，海外粉红有脸见人吗？**y
+
+**如果中共侵占台湾，世界各地的粉红们，应该如何回答记者的提问？**
+
+**新闻链接：**
+
+[Des Québécois nés en Russie «ont honte» de leur pays d’origine](https://www.tvanouvelles.ca/2022/02/26/des-quebecois-nes-en-russie-ont-honte-de-leur-pays-dorigine)
+
+在结束本文之前，让我们重温一下郭文贵先生2022年3月2日盖特视频透露的消息（[https://gettr.com/post/pxs37m0066](https://gettr.com/post/pxs37m0066) ）：
+
+***俄罗斯对乌克兰东南部做出无差别轰炸***
+
+***三个小时前，俄罗斯内部政治发生了急剧的变化***
+
+***连普京团队也开始发出不同声音***
+
+**世界各地的粉红们，听到了吗？醒醒吧。**
+
+
+
+**声明：**
+
+**由于语言和文化背景的不同，本文（或本视频）中对原文（或原视频）的翻译不能也不可能保证完全表达原文（或原视频）的内容。读者（或观众）要想了解确切的信息请参考下面链接指向的原文（或原视频）。本文（或本视频）内容仅代表作者个人观点，与发布本文（或本视频）任何媒体平台无关。本文（或本视频）作者：16626**
+
+
 
 **编辑：LILY**
 
-**发布：MQ**
+**发布：歪桑**
 
 20220303
 
