--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,28 +1,34 @@
 ---
-title: NFSC新闻、G&#124;TV新闻访谈简报&#124;2022年3月3日早
+title: 英国联合38国将俄侵乌暴行提交国际刑事法院
 ---
-`纽约香草山MOS01` [轉載自GNews](https://gnews.org/zh-hans/2100943/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2101024/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/2-GNEW-GTV-MOS-LOGO.jpg)
+**整理：围剿维尼熊
+编辑：Candy**
 
-作者：香草山翻译部
-![](https://assets.gnews.org/wp-content/uploads/2022/03/GTV_-_Google_-1-1.png)
-文章仅代表作者本人观点，与Gnews无关
+**【雅典娜快讯】，紧贴时代脉搏**
 
-视频参看：
-[2022.03.03早 《NFSC新闻》](https://gettr.com/streaming/pxy6kk0828)[2022.03.03早 G|TV《新闻访谈》](https://gettr.com/streaming/pxywow1186)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/诉俄.png)图片来源：雅典娜设计组
 
-编辑： Lakers
-校对： Lakers
-发稿： Lakers
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/1-calendar-4.png)
+根据大纪元2022年3月3日讯，英国和其它38个国家已将俄罗斯入侵乌克兰期间的暴行，正式提交给国际刑事法院（ICC）。
 
-**更多资讯，更多关注**
-[纽约香草山农场GTV-香草山之声](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[纽约香草山农场GTV-MOS TALK 香草山访谈](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[纽约香草山农场Gettr](https://www.gettr.com/user/himalaya_mos)
-[纽约香草山农场 YouTube](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+据国际刑事法院的规则，成员国正式提告，意味着检察官在开始调查之前，不必得到国际刑事法院法官的批准。
+
+英国联合其它38国一同提交请求，成为了国际刑事法院历史上规模最大的一次。英国外交大臣莉斯·特拉斯（Liz Truss，港译卓慧思）表示迫切需要国际刑事法院调查俄罗斯的野蛮行径，追究那些应为此负责的人。英国将与盟国紧密合作，确保正义得到伸张。
+
+在英国和盟国的要求下，国际刑事法院检察官卡里姆·汗（Karim Khan）已积极开始对乌克兰战争进行调查。
+
+参考链接：[39国指俄侵乌涉暴行 国际刑事法庭展开调查](https://www.epochtimes.com/gb/22/3/3/n13617865.htm)
+
+***发布：Candy***
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
