--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,39 +1,32 @@
 ---
-title: 加拿大央行加息后，加拿大皇家银行将其最优惠利率提高四分之一个百分点
+title: 现金、尿布和波兰境内位于克拉科夫的房子：这些都是加拿大人正在为帮助乌克兰人做出的奉献
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101255/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101321/)
 
-作者： The Canadian Press
-翻译：HimaCoby
-![](https://assets.gnews.org/wp-content/uploads/2022/03/70_152S4416.jpg)
-加拿大皇家银行（RBC）和道明银行（TD）均表示，在加拿大央行宣布上调利率后，他们也将把其最优惠利率提高25个基点。
+**翻译：追郭大姨**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-320.png)图片来源：[Toronto Star](https://www.thestar.com/news/canada/2022/03/02/cash-diapers-or-a-home-in-krakow-heres-what-canadians-are-contributing-to-help-ukraine.html)
+加拿大人向乌克兰提供帮助，帮助他们对抗入侵的俄罗斯军队。随着俄罗斯入侵乌克兰进入第二周，越来越多的加拿大人响应了帮助乌克兰对抗普金的呼吁。
 
-央行表示，在周三把关键利率提高四分之一个百分点至0.5%，以帮助应对加拿大自1991年以来，历史最高水平的通货膨胀。
+从东海岸到西海岸，加拿大人都在捐赠医疗用品和安全设备，比如军用头盔。很多人在努力为国防和人道主义提供资金援助。可悲的是普金正在加大对乌克兰人的打击力度。
 
-加拿大皇家银行和道明银行全部跟进上调，将其最优惠利率从2.45%推高至2.70%，从3月3日起生效。
+对于那些从多伦多到波兰的志愿者来说，对乌克兰难民的帮助就更为直接。同时，在加拿大温尼伯的一个民间组织已经收集了数千公斤的人道主义援助，从收音机到尿布。
 
-利率上升将增加贷款成本，如与基准利率挂钩的可变利率抵押贷款，但不会直接影响固定利率抵押贷款。
+**评论：**加拿大是世界上最美丽最热爱和平的国家之一，这里有醉人的风景和善良可爱的人们，这里的一切都是那么的平和。当我第一次踏上这块土地就深深地爱上了这里。很遗憾！现在这个爱好和平的国家，也发生了不平和的事。但我坚信善良坚毅的加拿大人一定会很快走出黑暗, 迎来一个属于加拿大人自己的美好明天！
 
-预计其他商业银行也会跟着提高利率。
+**原文链接：
+**[Toronto Star: Cash, diapers, or a home in Krakow: here’s what Canadians are contributing to help Ukraine](https://www.thestar.com/news/canada/2022/03/02/cash-diapers-or-a-home-in-krakow-heres-what-canadians-are-contributing-to-help-ukraine.html)
 
-加拿大样表示，可能需要进一步提高利率，以寻求方式降低1月份已经达到5.1%的通货膨胀率。
+**编辑：LILY**
 
-来源：https://financialpost.com/fp-finance/banking/rbc-raises-its-prime-interest-rate-a-quarter-point-after-bank-of-canada-hike
+**发布：MQ**
 
-**免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+**校对：NIE**
 
-**关注我们**
+20220303
 
-Discord 账号
-
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
