--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,64 +1,21 @@
 ---
-title: 安省男子因骗局花光了他一生26万元的的积蓄
+title: 乌克兰华人惊心动魄的出逃记
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101235/)
+`mayflowertranslate` [轉載自GNews](https://gnews.org/zh-hans/2101306/)
 
-作者：Pat Foran
-翻译：HimaCoby
-![](https://assets.gnews.org/wp-content/uploads/2022/03/70_10061OV.png)
-安大略省的一名男子说，他遇到一个网络加密货币的骗局，他一生的积蓄26万全部被骗光，这让他的生活陷入绝望。
+编辑：波士顿五月花—-思澈
 
-这位只想被称为James的男子告诉CTV多伦多：”我完全处于崩溃，我至少有六天不能吃东西。我还在试图走出来。”
+乌克兰一华人讲述了自己一家四口，一对年轻夫妇带着两个幼小的孩子如何惊心动魄的逃脱出战火纷飞的乌克兰，同时暴露出来此时的中共战狼变成隐者神龟销声匿迹了。
 
-James说，他在一个约会网站上遇到一个女人，她说可以教James如何投资加密货币赚钱。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/7C2B209C-CED4-4A04-B5E0-325B2C9A4389.jpeg)created by inCollage
 
-James说他从1,000元开始，但当他看到投资收益上升时，他开始投入更多资金。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/A9432499-7973-46BB-BBD2-A69EF6F3BD96.jpeg)created by inCollage
 
-James说：”我去了银行，我汇出了两笔5万元的金额，还有另外一笔3万元。”
+点评：中共知道俄罗斯什么时候入侵乌克兰，为什么没有撤侨计划？为什么没有撤侨的具体时间？此时侨民最需要的战狼为什么不出现？中共必须给中国人和海外侨胞解释这三个问题。
 
-最后他给骗子汇了26万多，结果这笔钱全部有去无回。
+*发布：思澈*
 
-警察告诉他，一旦资金被汇到骗子手中，就几乎不可能追踪到和取回。
 
-3月是预防诈骗月，警方注意到最近多伦多的加密货币诈骗案件增加，在本周发出了公共安全警报。
-
-**诈骗通常如何开始**
-
-多伦多警方发言人Const. Jenifferjit Sidhu告诉CTV News Toronto，骗子往往利用社交媒体邀请人们轻松赚钱开始。
-
-Sidhu说：”骗子通过电子邮件、短信把信息发送给所有人。”
-
-她说，通常骗子会要求受害者投资一小笔钱，以赢得他们的信任，然后使用虚假的网站，显示大量虚假利润。
-
-之后，骗子会再来找受害者，寻求更多的钱。
-
-Sidhu说：”一旦他们获得你的个人资料，你的个人信息就会被交给一个假的投资经纪人，看起来你在赚钱，但实际上并没有。”
-
-加密货币欺诈正在全球范围内发生，为帮助诈骗受害者而成立的全球反诈骗组织（GASO）表示，犯罪分子会使用各种方法来操纵受害者给他们钱。
-
-GASO的Grace Yuen告诉CTV News Toronto：”一些骗子，他们与受害者交谈了几个月，只是试图获得他们的信任。”
-
-骗子可能允许受害者在开始时拿出少量资金以获得信任，但一旦投入大量资金，就会称投资失败。
-
-骗子还可能告诉受害者，他们需要交税或其他费用才能获得资金，但支付更多的钱只是骗局的另一部分。
-
-全球反诈骗组织在全球拥有约55名志愿者，截至2021年12月，全球反诈骗组织与超过910名受害者建立了联系，他们的损失超过1.44亿元。
-
-来源：https://toronto.ctvnews.ca/ontario-man-devastated-after-falling-for-260-000-scam-that-drained-his-entire-life-savings-1.5803253
-
-**免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
-
-**关注我们**
-
-Discord 账号
-
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
