--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,23 +1,36 @@
 ---
-title: 新中国联邦乌克兰救援行动初获胜果
+title: 有声&#124;中俄暧昧关系遭美方谴责
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2100725/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2100822/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+2月28日，白宫印太事务协调官库尔特‧坎贝尔表示，在俄罗斯侵略乌克兰战争中，中俄之间的暧昧关系，以及公开和深入的联系，令人很不舒服。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/11-3-scaled.jpg)
+俄罗斯入侵乌克兰，被国际视为二战以来对欧洲国家的最大侵略，世界各国纷纷表示谴责，并实施各种制裁。中共不仅没有任何谴责，反而在联合国就一项谴责俄罗斯入侵的议案表决中，投了弃权票。在北京冬奥期间，中俄还签署了一份联合声明，宣称两国建立了无间的战略合作关系，同时，中共也是俄罗斯的最大贸易伙伴。
 
-采编/编辑撰稿：硫酸羟氯喹64
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-304.png)图片来源：GTV 
-据3月2日GTV文贵大直播消息，本次由新中国联邦主导参与的“乌克兰国际人道救援行动”捷报频传，不仅向世界展示了爆料革命强大的执行力和国际影响力，更体现出新中国联邦人在果敢行动中实现“灭共是正义需要”的宗旨。
+此前，美国总统拜登于2月24日，虽没有直接点名中共，但严正警告：任何支持俄罗斯对乌克兰侵略的国家，都将身败名裂。
 
-据悉，新中国联邦目前已成功在乌克兰战火中救出了至少四位爆料革命资深战友及其家人和朋友，并已全部安全抵达波兰。
 
-同时，喜马拉雅联盟委员会负责人大卫和老班长及相关战友团队都已准备就绪飞赴乌克兰和波兰，并计划在匈牙利、罗马尼亚建立营救基地。
 
-此外，新中国联邦与联合国救援组织将与当地国军方合作，全力营救被困华人，整个救援过程不需要提供任何个人信息。在成功进入波兰后，将直接入驻联合国指定酒店，享受30天免费食宿。最后，按被救助者个人意愿，提供免费航班飞往指定的安全国家。
+文字版原文：[中俄暧昧关系遭美方谴责](https://gnews.org/zh-hans/2098839/)
 
-发稿：青青
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-8.png)
+**更多资讯，更多关注**
 
-消息来源：https://gtv.org/video/id=621f6ab7019ef64da653b4fe
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
