--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,47 +1,32 @@
 ---
-title: 帕克代尔租户在整栋大楼收到驱逐通知后进行反击
+title: 现金、尿布和波兰境内位于克拉科夫的房子：这些都是加拿大人正在为帮助乌克兰人做出的奉献
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101268/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101321/)
 
-作者：DH Toronto Staff
-翻译：HimaCoby
-![](https://assets.gnews.org/wp-content/uploads/2022/03/22_1J94L09.png)
-日前位于多伦多一栋公寓楼的租客们因为收到业主的驱逐令而倍感不满，他们一致行动，向房东进行反击。
+**翻译：追郭大姨**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-320.png)图片来源：[Toronto Star](https://www.thestar.com/news/canada/2022/03/02/cash-diapers-or-a-home-in-krakow-heres-what-canadians-are-contributing-to-help-ukraine.html)
+加拿大人向乌克兰提供帮助，帮助他们对抗入侵的俄罗斯军队。随着俄罗斯入侵乌克兰进入第二周，越来越多的加拿大人响应了帮助乌克兰对抗普金的呼吁。
 
-这栋位于多伦多市12 Landsdowne Avenue。楼内的每位居民近日都收到了房东12 Landsdowne Inc.公司发出的N13搬迁通知。
+从东海岸到西海岸，加拿大人都在捐赠医疗用品和安全设备，比如军用头盔。很多人在努力为国防和人道主义提供资金援助。可悲的是普金正在加大对乌克兰人的打击力度。
 
-通常这些驱逐令是在房东要给房子进行维护和装修时使用。等到这些维修工程竣工之后，房东们也要以跟装修前差不多的租金水平，再把房子租回给这些租客。但是这栋楼的居民担心他们搬走以后事情就不一样了。
+对于那些从多伦多到波兰的志愿者来说，对乌克兰难民的帮助就更为直接。同时，在加拿大温尼伯的一个民间组织已经收集了数千公斤的人道主义援助，从收音机到尿布。
 
-接到驱逐通知后，租客们就很担心会成为房子重装的受害者，因为他们的房东此前就因为类似的事情被罚款过。
+**评论：**加拿大是世界上最美丽最热爱和平的国家之一，这里有醉人的风景和善良可爱的人们，这里的一切都是那么的平和。当我第一次踏上这块土地就深深地爱上了这里。很遗憾！现在这个爱好和平的国家，也发生了不平和的事。但我坚信善良坚毅的加拿大人一定会很快走出黑暗, 迎来一个属于加拿大人自己的美好明天！
 
-租客和住房维权者表示，这家公司的所有者Neil Spiegel和Evan Johnsen曾经有过利用安省房东与租客法律漏洞的记录。
+**原文链接：
+**[Toronto Star: Cash, diapers, or a home in Krakow: here’s what Canadians are contributing to help Ukraine](https://www.thestar.com/news/canada/2022/03/02/cash-diapers-or-a-home-in-krakow-heres-what-canadians-are-contributing-to-help-ukraine.html)
 
-作为12 lansdowne Inc.的负责人，Spiegel和Johnsen曾在2019年因为不当驱逐租客被罚款过两次。2017年时，他们也曾给795 College Street楼内的租客发出N13通知令，但租客搬走、装修完成之后，他们大幅抬高了租金。最终他们也因此被罚了13万5000元。但是这些钱并没有被补偿给遭到不公正驱逐的租客们。
+**编辑：LILY**
 
-对于此事，Spiegel回应称，这次的情况不会重蹈College Street装修事件的覆辙。
+**发布：MQ**
 
-但租客们对这种说法并不买账。近期他们在社区附近张贴了多张海报，申诉自己的处境，并要求房东放弃驱逐令。
+**校对：NIE**
 
-租客们在海报上把房东描绘为蟑螂并写道，“Parkdale有虫害问题。”
+20220303
 
-他们也呼吁当地居民联络房东，要求他们终止驱逐令。
-
-来源：https://dailyhive.com/toronto/parkdale-tenants-eviction-notices
-
-**免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
-
-**关注我们**
-
-Discord 账号
-
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
-
-Gettr 账号
-
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
