--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,64 +1,44 @@
 ---
-title: 普京寡头好友损失数十亿美元，于战争中渴求和平
+title: 俄军进行无差别攻击造成2000多平民死亡
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2101208/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101309/)
 
-据《Washington Examiner》记者：Jerry Dunleavy，2022年2月28日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-317-e1646329537399.png)图片来源：FT.COM
-弗拉基米尔·普京 (Vladimir Putin) 的亿万富翁朋友，包括2016年特朗普与俄罗斯勾结的虚假指控而被卷入其中的一对，正在呼吁乌克兰实现和平，因为美国和国际社会对俄罗斯入侵的全面制裁威胁到他们的命运。
+**撰稿：温哥华圆成农场 文明志**
 
-俄罗斯阿尔法银行的联合创始人米哈伊尔·弗里德曼在 2016 年总统大选期间被揭穿与特朗普组织秘密接触，他对普京的战争也表示反对。同时，与前特朗普竞选经理保罗·马纳福特和英国前间谍克里斯托弗·斯蒂尔的商业关系而闻名的奥列格·德里帕斯卡现在也在为和平而努力。
+据3月3日读卖新闻驻莫斯科和华盛顿特派记者综合报道，2日，入侵乌克兰的俄罗斯军队袭击了哈尔科夫东部的大学和警察局。 对非军事设施的袭击开始增加，包括允许俄军导弹袭击首都基辅的电视塔。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-319.png)图片来源：[YOL読売新聞](https://www.yomiuri.co.jp/s/ims/RussiaUkraineKyiv/?from=yhd)
+从俄罗斯入侵开始，对居民区的破坏正在扩大，乌克兰政府2日宣布，已有2000多名平民在袭击中丧生。
 
-德里帕斯卡周末在他的电报页面上说：“和平非常重要！谈判需要尽快开始！”
+据英国BBC等报道，2日哈尔科夫市中心的政府机关每天都受到导弹袭击。 有一种观点认为，其目的是使城市功能瘫痪。 市政府官员昨天宣布，在过去 24 小时内，已有 21 人死亡，112 人受伤。 还有消息称俄罗斯地面部队已进入该市。
 
-弗里德曼更直接——也更个人化。
+另据报道，俄军1日晚向基辅市电视塔发射了两枚导弹，这次袭击造成五人死亡，五人受伤，电视广播暂停播放。俄罗斯国防部2日在公告中承认了这次袭击，称“电视塔被毁，但房屋没有损坏”。俄罗斯国防部此举拟摧毁基辅的信息相关设施以应对跟乌克兰的信息战。 由此看来，今后俄军对乌克兰非军事设施的不分青红皂白的袭击可能会继续增加。
 
-“我出生在乌克兰西部，一直住到17岁。我的父母是乌克兰公民，住在我最喜欢的城市利沃夫。”弗里德曼在周末给他的英国公司员工的电子邮件中写道。“但作为俄罗斯公民，我也度过了我一生的大部分时间，建立和发展企业。我深深地依附于乌克兰和俄罗斯人民，并将当前的冲突视为他们俩的悲剧。”
+基辅电视塔附近的一座纪念大屠杀（纳粹德国屠杀犹太人）遇难者设施也因袭击而受损。 乌克兰总统泽连斯基在推特上指责这是希特勒二战的“历史重演”，通过将普京与纳粹德国相提并论来批评普京的侵略。
 
-弗里德曼继续警告，这场战争正在分裂拥有共同纽带的两个国家。
+在日托米尔西部，2日，空军设施附近的几所房屋遭到轰炸，造成2人死亡，16人受伤。
 
-弗里德曼写道：“我不发表政治言论，我是一名商人，对我在俄罗斯和乌克兰的数千名员工负有责任。但我相信战争永远不会成为答案。这场危机将夺去生命并损害两个数百年来一直是兄弟的国家。……虽然解决方案似乎遥不可及，但我只能加入那些热切希望结束流血的人。”
+俄罗斯军队也在攻击面向黑海的乌克兰南部。 五角大楼2日宣布，俄军已经“完全控制”了人口约30万的南部重要城市赫尔松市中心。 乌方对此予以否认，看来激战还在继续。
 
-据福布斯报道，弗里德曼身家134亿美元，德里帕斯卡身家39亿美元。该媒体上周报道称，自2月中旬以来，俄罗斯100多名亿万富翁的损失超过1260亿美元，其中仅在周四就损失了710亿美元。
+关于港口城市马里乌波尔的情况，市长向当地电视台解释说，“由于俄军不断的袭击，造成了很多人的伤亡”。
 
-作为美国对俄罗斯全面金融制裁的一部分，阿尔法银行周四受到拜登政府的制裁。
+截至2日下午，对基辅的全面进攻尚未展开。 美国国防部一名高级官员昨天表示，俄罗斯军队在基辅以北约 25 公里处停滞不前。他还指出俄军缺乏燃料和食物，并表示俄军可能推迟了行进，以重新获得阵地。
 
-周一，欧盟制裁了弗里德曼和他的阿尔法银行联合创始人彼得·艾文等俄罗斯寡头。欧盟表示，弗里德曼“设法与弗拉基米尔·普京政府建立了牢固的联系，并被称为俄罗斯顶级金融家和普京核心圈子的推动者”，而艾文“是弗拉基米尔·普京最亲密的寡头之一”。欧盟表示，弗里德曼和艾文“在物质或财政上积极支持，并从负责吞并克里米亚和破坏乌克兰稳定的俄罗斯决策者那里受益”。
+美国还表示，俄军在乌克兰周边集结的部队80%以上已被投入乌克兰。
 
-弗里德曼和艾文周一发表声明称，他们“对欧盟条例中的明显虚假和诽谤指控深感震惊，这些指控旨在证明我们受到制裁的依据”，并且“将对实施制裁的虚假和毫无根据的依据提出质疑”。两人表示，制裁他们“不会影响俄罗斯在乌克兰的行动，因为彼得和米哈伊尔与普京总统没有经济或政治关系”。
+另一方面，2日俄罗斯和乌克兰的停火谈判无疾而终。在此之前，乌克兰总统泽连斯基先生表示，“只要轰炸还在发生，我们就不会对会谈作出回应”。
 
-克里姆林宫发言人在2018年5月表示，弗里德曼和艾文“绝不是普京的特使”。俄罗斯国营塔斯社表示，俄罗斯商界的三十几名代表周四会见了普京，其中包括艾文。
+**消息来源：
+**[Yahoo：都市機能マヒ狙うロシア、無差別攻撃増える可能性…ウクライナ政府「民間人２千人以上が死亡」](https://news.yahoo.co.jp/articles/5cbf58c216bd8d0af1a8c7fdbad9fe361f19b4e8)
 
-上周，拜登终于允许国会授权对克里姆林宫资助的北溪2（Nord Stream 2）管道背后的公司实施制裁。据报道，弗里德曼对一家德国公司进行了数十亿美元的投资，该公司本身也投资了北溪2（Nord Stream 2）。
+**编辑：LILY**
 
-其他俄罗斯商人、记者和艺人也公开反对俄罗斯的入侵，数百人在抗议期间被捕。
+**发布：MQ**
 
-一位不愿透露姓名的莫斯科亿万富翁告诉路透社，这场战争“在所有意义上都将是灾难性的——对于经济、与世界其他地区的关系、对于政治局势而言”。
+20220303
 
-俄罗斯亿万富翁、切尔西足球队的老板罗曼·阿布拉莫维奇周末宣布，他将给予切尔西慈善基金会的受托人对球队的“管理和照顾”。阿布拉莫维奇周一声称，他正在应乌克兰人的要求帮助俄罗斯与乌克兰的和平谈判。
-
-阿布拉莫维奇的女友于2013年在纽约市生下了他们的孩子，当时他将超级游艇停在了曼哈顿。
-
-一位美国高级国防官员周末誓言，“我们将成立一个多边跨大西洋工作组，以查明、追捕和冻结受制裁的俄罗斯公司和寡头的资产——他们的游艇、他们的豪宅，以及我们获得的任何不义之财。可以根据法律找到并冻结。”
-
-文章有删减。
-
-文章来源：[https://www.washingtonexaminer.com/news/putins-russiagate-oligarch-pals-lose-billions-beg-for-peace-amid-ukraine-invasion](https://www.washingtonexaminer.com/news/putins-russiagate-oligarch-pals-lose-billions-beg-for-peace-amid-ukraine-invasion)
-
-翻译：洛杉矶盘古农场 – Raul
-
-校对：洛杉矶盘古农场 – 轰炸机
-
-编辑：洛杉矶盘古农场 – WenXiong
-
-发布：洛杉矶盘古农场–子萍
-
-
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U+2](https://discord.gg/2vuvRm7z6U+2)
-
+更多资讯请关注：
+[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
+![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
