--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,32 +1,33 @@
 ---
-title: 七哥非常担心台湾和国内的亲朋好友
+title: 俄乌二次谈判 乌克兰要求俄罗斯停火并建立人道主义走廊
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101148/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2101202/)
 
-文编：Hima
-听写：叮叮
-视频：七哥
+翻译：冰糖葫芦喵
 
-2022-02-27直播摘录
+编辑与校对：冰糖葫芦喵
 
-中国人，说实在，为啥我七哥，这几天有时候想想国内的……我的同事、家人，我就不知道怎么好，我也没办法都弄出来。怎么让这些人呢？你像我的同事，我们的杨英，我最近老梦见她是吧，为什么？还戴着脚镣、手铐，就电子脚镣，五、六年，在里边待了三、四年，她一个财务会计，她上哪还去找工作去，是吧？中国人有多现实，哪有像西方人，还有个有勇敢的人士站出来，是吧？中国人是一面倒的懦弱自私、欺负弱小，杨英能有工作吗？她咋活呢？我们的原来的跟我创业的马成、杨克森、赵广东、吕涛，这高管都在监狱待了四、五年出来，现在他有过去跟着我混，都有个亿儿、八千万的、几千万的个人资产，但是你一旦这个东西发生以后，你这些钱不是钱了，你的钱不是钱了，他们咋活呀？是吧。还有我这些家人，哥哥、嫂子、侄子的，是吧？还有所有的这些亲人，你说我这同事、我这些裕达、盘古的这些老员工，被他们抢走了，都有点钱，但以后怎么活是吧？我愁这事情。
+《路透社》乌克兰博罗江卡/利沃夫 3月3日报道，周四，**乌克兰谈判代表与俄罗斯官员举行第二次会谈，要求双方达成停火协议，并建立人道主义走廊撤离被围困的公民。**
 
-另外一个确确实实担心，台湾我很多的这些朋友，你知道。台湾来了以后他们咋办？不都是有钱的，很多原来跟我认识的，都是台湾普普通通的，过得很稳定的日子，但战争一来他们咋办？你像李祖原大师都七、八十岁了，他说不出来咋办呢？在台湾，他那个人是个佛教徒，天真的跟孩子一样，是吧？你真要发生战争，他会很惨的，这是七哥担心的。
+此前，俄乌在白俄罗斯举行的第一次会谈没有取得进展，双方都没有表示期待取得突破。
 
-校对：HimaFaFA
-发布：HimaBoy
-![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
-欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
+报道称，乌克兰总统顾问米哈伊洛·波多里亚克(Mikhailo Podolyak)表示**，乌克兰将要求立即停火和“建立人道主义走廊，将平民从被摧毁或不断炮击的村庄/城市中疏散出来”。**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/乌克兰城市.jpg)周四，俄罗斯军队向乌克兰发起攻击，乌克兰东部楚吉夫镇的一栋建筑被炮弹击中。AGENCE FRANCE-PRESSE — GETTY IMAGES
+据报道，俄罗斯的主要攻击部队在基辅北部的一条高速公路上暂停了几天，**俄罗斯已经改变了策略，升级了对城市的轰炸。拥有150万人口的哈尔科夫市中心大片地区被炸成废墟。**
 
-**关注我们**
+乌克兰东部主要港口马里乌波尔被猛烈轰炸包围，没有水也没有电。官员们表示，他们无法疏散伤员。市议会将这种情况比作第二次世界大战的列宁格勒围城。
 
-Discord 账号
+**乌克兰总统弗拉基米尔·泽伦斯基(Volodymyr Zelenskiy)留在基辅，定期向全国发布最新视频。在他最新的信息中，他表示乌克兰人的队伍在坚守。**
 
-![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
+**泽伦斯基说：“除了我们自己的自由，我们没有什么可以失去的，”。**
 
-Gettr 账号
+**联合国表示，在短短7天内，已有100多万难民逃离，人道主义危机正在恶化。**
 
-![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
+最后报道指出**，国际刑事法院的最高检察官说，一个先遣队已经离开海牙前往乌克兰地区，开始调查可能的战争罪行。**
+
+**新闻来源链接：**
+
+[Ukraine demands ceasefire, humanitarian corridors at talks with Russians | Reuters](https://www.reuters.com/markets/europe/top-wrap-10-ukraine-seeks-ceasefire-humanitarian-corridors-talks-with-russia-2022-03-03/)
 
  
 
