--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,47 +1,38 @@
 ---
-title: 令人心碎的照片：乌克兰儿童在俄罗斯袭击中丧生
+title: 人格，个性：是一个人作出决定的根本性基础
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/2101087/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101179/)
 
-据《纽约邮报网》(nypost.com) 作者：本·凯斯伦([Ben Kesslen](https://nypost.com/2022/02/27/tragic-photos-show-ukrainian-kids-killed-in-russian-attacks/?utm_source=twitter_sitebuttons&amp;utm_medium=site%20buttons&amp;utm_campaign=site%20buttons))，2022年2月27日报道：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-308-e1646328307306.png)在乌克兰东部马里乌波尔，医护人员对一名炮击受伤的女孩进行心肺复苏。
-图片来源：美联社
-周日出现了一些在俄罗斯对乌克兰的战争中遇难的,最年轻受害者的令人心碎的图片。
+文编：Hima
+听写：叮叮
+视频：七哥
 
-在来自乌克兰顿涅茨克地区马里乌波尔市的令人心碎的照片中，有一张救护人员奥列克桑德·科诺瓦洛夫(Oleksandr Konovalov)对一个在俄罗斯袭击平民时受伤后被送到市医院的小女孩进行心肺复苏的镜头，但却徒劳无功。在她旁边，一个浑身是血的成年人痛苦地蹲了下来。
+2022-02-27直播摘录
 
-更多照片显示，在马里乌波尔医院内，她被一队成年人包围着，拼命地想要挽救她年轻的生命。
+共产党就习的个性，你要看一个人的个性。人格，个性：是一个人作出决定的根本性基础。习这个人有着很矛盾的性格，他文化程度不高。但是这个人，确实非常循规蹈矩的一个人。很程序化，很官僚化，这跟他的家庭它是有关系的。另外一个这个人，他非常的倔强，什么事情都很倔，他并不是听进别人话的人，但是他决定的事情，就是一定执行下去。这两者之间是矛盾的，两会是程序化是要开的，他要是执意要打台湾的，这和普京俩商量好，他如果因为两会没打台湾，那是他是绝对是不是习近平的个性。他不会改的，反过来也说了，因为打台湾，不开两会这也不是习近平的个性。他该打打，该开开，这两者并不矛盾，是你把它想解成是这个矛盾，你给他设定了个前提条件，这两者根本不存在相互性。
 
-据《基辅独立报》报道，卫生部长维克多·利亚什科透露，她不幸成为迄今为止在战争中被杀害的16名儿童之一。
+习现在是什么概念？看到乌克兰这个事情。习会就很大触动，据我们军方的内部朋友说：他不能确定，但他有感觉，他说：“他们开会当中认为普京不会超过48小时一定把基辅拿下，而且会斩首泽连“锁”基，包括泽连基科都给他干掉。” 他们认为这是当时…他们没有人直说，是暗示。然后咱们这军中的朋友认为就是，共产党习到这，他要干什么？第一枪过去，如果是迅速占领法的话，不是围而不挡的话，就直接蔡英文、陈水扁这几个所有的，所谓的民主党的大佬直接斩首。
 
-另一张照片拍摄了一些幸存者，其中包括一名妇女. 她手里抱着她的孩子和宠物狗，为了躲避街头战斗和城市中发生的冲突，她们挤进了马里乌波尔的一个避难所。
+一个是内部背叛斩首，所谓的“杀毒救台”，“杀毒救台”，也可能共产党的就是无人机的斩首。这是他认为当时的感觉，但今天他现在感觉是不一样了，他觉得这个普京没上前面去弄。包括乌克兰的反抗在国际上引起的这种反响，就是刚才我们说的乌克兰的媒体信息战、科技战、网络战，做得这么成功，对他们是有触动的。
 
-利亚什科称俄罗斯军队以平民为目标,是“恐怖分子”。总统沃洛德米尔·泽伦斯基(Volodymyr Zelensky)称，俄罗斯人应该因犯下国际战争罪而被审判。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-309-e1646328358247.png)奥列克桑德·科诺瓦洛夫(Oleksandr Konovalov)试图抢救这个年轻女孩，但她随后不幸死亡。
-图片来源：美联社(AP)![](https://assets.gnews.org/wp-content/uploads/2022/03/image-310-e1646328403190.png)到目前为止，已有16名儿童在战争中丧生。
-图片来源：美联社(AP)![](https://assets.gnews.org/wp-content/uploads/2022/03/image-311-e1646328445134.png)年轻的女孩被一队成年人包围着，拼命地想挽救她的生命。
-图片来源：美联社(AP)
-周末，乌克兰各地的战斗仍在继续。俄罗斯总统弗拉基米尔·普京(Vladimir Putin)周日下令将该国的核武系统置于高度警戒状态，因此看不到明确的结束迹象。
+这个触动最多是谁呀？许其亮。许其亮这个人是空军出来的，他是整个解放军的总头子，是习最相信的人。还有“八喜”——李八喜，李八喜所谓的科技战的背后的隐形的战神，你们都不知道的，是三部里面出来的人代号——李八喜。李八喜看到整个俄罗斯战争以后，三部作为一个科技上最核心的，还有许其亮，就感觉到空军是空中技术和电子战的核心的角色。说如果现在解放军当初的用最廉价的东西，快速的闪电战达到的目的，可能会适得其反。因为现在他们知道美、日在整个台海周围，潜水艇部队这是个大杀器。冲在前面的是空军，然后无人机，还有导弹，这几个方面都离不开，现在今天、未来看到的就是信息通信。这个电子战极为重要，这对他们影响是很大的，这是目前来看，确实震撼到他们，对他的战略是绝对有影响的。
 
-一些最激烈的战斗发生在哈尔科夫市。当地乌克兰官员周日宣布了胜利。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-313-e1646328487440.png)女孩，俄罗斯炮击的受害者。图片来源：美联社![](https://assets.gnews.org/wp-content/uploads/2022/03/image-314-e1646328528208.png)卫生部长利亚什科（Viktor Lyashko）称俄罗斯军队以平民为目标是“恐怖主义者”。
-图片来源：美联社![](https://assets.gnews.org/wp-content/uploads/2022/03/image-315-e1646328568120.png)一名妇女抱着她的孩子和宠物狗挤进马里乌波尔的一个收容所。
-图片来源：美联社
-原文连接：[https://nypost.com/2022/02/27/tragic-photos-show-ukrainian-kids-killed-in-russian-attacks/?utm\_source=twitter\_sitebuttons&utm\_medium=site%20buttons&utm\_campaign=site%20buttons](https://nypost.com/2022/02/27/tragic-photos-show-ukrainian-kids-killed-in-russian-attacks/?utm_source=twitter_sitebuttons&amp;utm_medium=site%20buttons&amp;utm_campaign=site%20buttons)
+但是你知道Karen，上天他就是那么捉弄人，所以共产党它成立来自就是谎言，是吧？从当时战区划，搞分土地，睡地主的老婆、女儿，让你整个阶级矛盾，然后最后是分土地，搞人民公社，吃大锅饭，然后是承包责任田，然后骗的就是中国人民，他就是骗子。天下，我说过共产党最早“以骗治国、以黑治国、以警治国”。行了，这回这一下坏了，下边人为了让许其亮，为了什么“八喜”为保住自己全家的小命，在西山那个地方他只能撒谎。“没问题，咱……你说首长你一声令下，你想要蔡英文、陈水扁的哪根毛，我就给你拔过来去。” 是吧？真的他敢这么说话的，“放心，我绝对是分秒不差把目标拿下。” “如果日军在这背后所谓的支持，” 也就是说代理战争，“我会在潜水上潜水艇让日本吃哑巴亏，让日本的七大将军叫——冈田次，冈田次的潜水舰，我们直接就把它从地下直接给它消灭，让他吃哑巴亏，不能说，这样警告他。” “美国来几个航空母舰，只要他动咱打航母，先干倒两个舰队，而且是用地下，我们的埋藏的潜水艇，自杀性的‘战狼’。”——水下“战狼”。“这一说我才寻思，咱跟他俄罗斯不一样是吧？” 然后肯定许其亮他说：“乌克兰是大平原，地广人稀是吧？得大面铺开，台湾就是一小岛嘛，是不是？那不就咱伸裤裆里边拔根毛，“噗”，吹掉吗？” “哎有道理啊！”——所以他互相骗，互相忽悠。最后就是习太阳成了裤裆里那个毛了——就把他给吹了！大家都知道你知道吗？，都很清楚！所以说，这时候大家看看谁骗过谁，可能共产党最后要为这个“骗”付出巨大的代价。
 
-翻译：洛杉矶盘古农场 – TrueSky
+校对：HimaFaFA
+发布：HimaBoy
+![This image has an empty alt attribute; its file name is FINAL-VERSION-color-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-1.png)
+欢迎加入喜马拉雅英里农场：请点击农场LOGO图进入
 
-校对：洛杉矶盘古农场 – Freeearth
+**关注我们**
 
-编辑：洛杉矶盘古农场 – WenXiong
+Discord 账号
 
-发布：洛杉矶盘古农场–子萍
+![This image has an empty alt attribute; its file name is Discord-QR-CODE.png](https://assets.gnews.org/wp-content/uploads/2021/10/Discord-QR-CODE.png)
 
+Gettr 账号
 
-[![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
-洛杉矶盘古农场欢迎您加入:(或点击上方图片）
-
-[https://discord.gg/2vuvRm7z6U+2](https://discord.gg/2vuvRm7z6U+2)
+![This image has an empty alt attribute; its file name is qrcode_2666792_-1.png](https://assets.gnews.org/wp-content/uploads/2021/10/qrcode_2666792_-1.png)
 
  
 
