--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,23 +1,36 @@
 ---
-title: 俄军侵略乌克兰加速俄罗斯闭关锁国
+title: 有声&#124;得克萨斯州长要求商店停止销售俄罗斯产品
 ---
-`加拿大温哥华扬帆农场《枫叶快讯》` [轉載自GNews](https://gnews.org/zh-hans/2100454/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2100791/)
 
-加拿大温哥华杨帆农场 枫叶快讯
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+美国媒体3月1日报道，美国得克萨斯州州长格雷格·阿博特正在敦促该州的商店和零售商下架俄罗斯制造的产品，要求酒吧停止出售来自俄罗斯的伏特加，以示与乌克兰的团结。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/9-4-scaled.jpg)
+在过去的一周里，全世界都目睹了俄罗斯进军乌克兰，勇敢的乌克兰人民一直在为阻止入侵不懈战斗。得州州长的行为虽然不可能对俄罗斯造成致命得打击，但强烈地表达了该州对于这场冲突的立场。
 
-采编/编辑撰稿： 文莱
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-296.png)图片来源：https://thepostmillennial.com/
-据加拿大媒体【后千禧年】3月1日报道，除了基本运输和邮递行业以外，包括苹果和福特等越来越多的国际大型企业开始加入到断绝与俄罗斯商业合作的行列。
+同时，得州禁止销售的某些俄罗斯产品，也可能会在国家其他大规模制裁的基础上进一步削弱俄罗斯的海外收入。
 
-报道称，为反抗俄罗斯侵略乌克兰，许多国家目前已禁止俄罗斯飞机进入其领空。同时，欧美及其盟国也已对俄罗斯及普京实施了严厉经济制裁，惩罚性的多米诺骨牌效应也将逐渐显现。
 
-据悉，英国石油巨头BP和壳牌都停止了与俄罗斯的贸易。联邦快递和UPS也警告称，将无法保证提供其在战乱地区的服务。国际集装箱运输行业的顶级公司，马士基和MSC日前都取消了往返俄罗斯的货运订单。苹果公司不仅暂停了在俄罗斯所有产品的销售，而且还封禁了乌克兰的地图信息，以保护当地居民的安全。
 
-校对编辑：硫酸羟氯喹64
+文字版原文：[得克萨斯州长要求商店停止销售俄罗斯产品](https://gnews.org/zh-hans/2098841/)
 
-发稿：青青
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3-8.png)
+**更多资讯，更多关注**
 
-原文链接： [Growing list of companies cut ties with Russia over Ukraine invasion | The Post Millennial](https://thepostmillennial.com/growing-list-of-companies-cut-ties-with-russia-over-ukraine-invasion)
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
