--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,48 +1,36 @@
 ---
-title: 随着多伦多市场炙手可热，这对夫妇套现并搬到了位于蒙特朗布朗的一座价值 120 万元的豪宅
+title: 安大略省确认又有 19 例 COVID-19 死亡
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101326/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/2101353/)
 
-作者：Andrea Yu
+作者：Kerrisa Wilson
 翻译：HimaCoby
-![](https://assets.gnews.org/wp-content/uploads/2022/03/22_13320V96.png)
-来自安省Oakville的一对夫妇近期想要换房，但多伦多周围楼市火热，他们就把目光投向了其他地方。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/22_105TI15.png)
+据安省政府网站3日通报，过去24小时，新增确诊2262人，全省累计确诊1,107,408人。
 
-56岁的杂志出版人John Thomson和53岁的时尚顾问兼健身教练Cathy Thomson在2009年时花64万元，买下Oakville市中心一套带三居室两间半浴室的镇屋。
+新增治愈2293人，至今1,077,985人已康复。
 
-当时他们俩的女儿Savannah和Melody都在读中学。他们一家人经常往返于Oakville和Beaver Valley生活。两人早在2005年时就在Beaver Valley买下了一间900平方尺的小木屋。
+今天通报死亡新增19人，由于数据清理，系统移除了2个死亡病例。
 
-到了2019年时，他们越发感觉到这间小木屋对于他们一家子来说太挤了，特别是当女儿们长大后想邀请好友们来的时候就不够住了。
+安省已有12,497人死于新冠。
 
-于是他们两夫妻在2019年3月以近40万元卖了这栋小木屋，并打算于2020年时再买一栋大一点的度假屋，但没想到发生了疫情，安省各地的度假屋都大幅涨价。
+目前有834名新冠患者在医院接受治疗，这是自去年12月29日以来的最低值。当时有726人住院。
 
-2020年夏天的时候，John发现自己的工作完全可以居家办公，而Cathy的大部分工作也通过视频会议进行。这时候他们俩的女儿也都已经高中毕业，去了Oakville以外的地方学习生活，因此两人不再需要住在Oakville市区里了。
+这些住院患者中，有267人在重症病房，一周前有302名重症病人。
 
-于是他们计划着卖掉镇屋并永久地搬到更大一点的度假屋生活，女儿和她们的朋友们或其他家人都可以来玩。
+这些住院患者中，45%的人因为新冠住院，其余55%因其他原因入院但新冠检测呈阳性。重症病房内，80%的病人因新冠进ICU，20%因其他原因重症，但被确诊新冠。
 
-在2021年夏季的时候，John和Cathy在翠湖山庄（Mont-Tremblant）租了一栋农场屋边工作边度假。这段期间里，他们爱上了附近的生活和自然环境，周边的餐馆和商店也让他们很满意。
+今天通报的死亡病例中有17个发生过去一个月时间内，另外两个发生在一个月以前。
 
-他们做了200万元左右的买房预算，因为他们预估在Oakville的房子大概可以卖到这个价钱。而且这个地方的楼市和安省相比没有那么火，同样的价格可以买到更好的房子。
+安省今天通报的确诊病例超过2200人，不过由于安省限制了检测人群，通报人数无法反映实际情况。
 
-去年8月，他们回到Oakville并给在翠湖山庄的一套房子下了offer。
+这些新增病例中，1762人打过两针，259人未接种疫苗，66人打了一针，175人疫苗状态不明。
 
-这是一套3800平方尺大的新建独立屋，带四室三卫，周围土地面积有两英亩。这个地方原先是一个滑雪道，旁边紧邻一个小湖Lac Bobby。
+过去24小时内，安省实验室完成了16,606次检测，阳性率为10.2%。
 
-这套新房的风格属于现代北欧风，主卧和次卧在楼上，一楼有家庭室和另外两间卧室，还有一个全套卫浴、一个储藏间和另外一个露台。房子还设有一个盥洗间，可以通往双车库。
+从大多区情况来看，多伦多市新增确诊324人，杜兰区新增134人，皮尔区新增120人，约克区新增92人，Halton地区新增92人。
 
-此外，这套房子还有一间桑拿房，到附近的滑雪山庄只要5分钟车程，开车3分钟可抵达高尔夫球场。
-
-这套房子叫价169万5000元，已挂牌上市了3个月。因此他们俩认为也许有讲价空间。于是他们出价105万元，卖家又提出119万5000元的售价，两人也接受了这个价位。
-
-后来他们把在Oakville的镇屋以199万9999元挂牌上市，不到6个小时就有人出价200万，他们俩便接受了这个offer。
-
-搬到翠湖山庄生活以后，他们经常邀请亲友来做客。女儿Savannah在多伦多工作和生活，她会每个月来探望两夫妻一次。另一个女儿从厨师学院毕业后搬来与他们俩一起生活，并在附近的一家餐馆任厨师。
-
-他们俩表示，很喜欢周围的生活环境。John每周至少会去滑雪三次，也会经常到附近的郊外散步。虽然他们也想念在Oakville的社交圈，但在这里他们也结识了新朋友。
-
-搬到新家五个月后，他们俩始终不敢相信真的住进了梦想中的房子。Cathy表示，“这里真是好。”
-
-来源：https://torontolife.com/real-estate/with-the-toronto-market-scorching-hot-this-couple-cashed-out-and-moved-to-a-1-2-million-chalet-in-mont-tremblant/
+来源：https://www.cp24.com/news/ontario-confirms-19-more-covid-19-deaths-under-900-hospitalizations-1.5803923
 
 **免责声明：**尽管作者努力揭示真相并保持信息准确性，但我们对网站，文章中引用的信息或相关图形的完整性，准确性和可靠性不做任何形式的明示或暗示的保证。 “观点”部分中表达的所有观点均属于作者，并不代表任何组织或其他个人。
 ![This image has an empty alt attribute; its file name is FINAL-VERSION-color-2.png](https://assets.gnews.org/wp-content/uploads/2021/10/FINAL-VERSION-color-2.png)
