--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,26 +1,75 @@
 ---
-title: 现金、尿布和波兰境内位于克拉科夫的房子：这些都是加拿大人正在为帮助乌克兰人做出的奉献
+title: 一旦中共武力侵占台湾，海外粉红有脸见人吗？现在普京对乌克兰动武，俄罗斯出生的魁北克人对自己的祖国（俄罗斯）感到&#8221;羞耻&#8221;
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101321/)
+`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101344/)
 
-**翻译：追郭大姨**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-320.png)图片来源：[Toronto Star](https://www.thestar.com/news/canada/2022/03/02/cash-diapers-or-a-home-in-krakow-heres-what-canadians-are-contributing-to-help-ukraine.html)
-加拿大人向乌克兰提供帮助，帮助他们对抗入侵的俄罗斯军队。随着俄罗斯入侵乌克兰进入第二周，越来越多的加拿大人响应了帮助乌克兰对抗普金的呼吁。
+**编译及评论：16626**
 
-从东海岸到西海岸，加拿大人都在捐赠医疗用品和安全设备，比如军用头盔。很多人在努力为国防和人道主义提供资金援助。可悲的是普金正在加大对乌克兰人的打击力度。
+**对祖国的热爱和对祖国发动战争感到的”耻辱”**
 
-对于那些从多伦多到波兰的志愿者来说，对乌克兰难民的帮助就更为直接。同时，在加拿大温尼伯的一个民间组织已经收集了数千公斤的人道主义援助，从收音机到尿布。
+俄罗斯裔魁北克人对祖国（俄罗斯）入侵乌克兰的决定感到不满，困惑于：对祖国的热爱和对祖国发动战争感到的”耻辱”之间。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/4AEA9FF9-3A21-43AF-9503-697B9B5EEA71.png)**图片来源：截屏于**[**https://www.tvanouvelles.ca/2022/02/26/des-quebecois-nes-en-russie-ont-honte-de-leur-pays-dorigine**](https://www.tvanouvelles.ca/2022/02/26/des-quebecois-nes-en-russie-ont-honte-de-leur-pays-dorigine)
+**玛丽娜·莫诺索娃****Marina Monossova.**
 
-**评论：**加拿大是世界上最美丽最热爱和平的国家之一，这里有醉人的风景和善良可爱的人们，这里的一切都是那么的平和。当我第一次踏上这块土地就深深地爱上了这里。很遗憾！现在这个爱好和平的国家，也发生了不平和的事。但我坚信善良坚毅的加拿大人一定会很快走出黑暗, 迎来一个属于加拿大人自己的美好明天！
+“我的祖国（俄罗斯）在做这种事，这让我处于一种（心理）冲突的状态。（我）有愤怒，羞耻，内疚的感觉”，玛丽娜·莫诺索娃Marina Monossova说。自从俄罗斯周三早上袭击乌克兰以来，（这位）被收养的蒙特利尔人一直无法进入正常的睡眠和专注的工作状态。
 
-**原文链接：
-**[Toronto Star: Cash, diapers, or a home in Krakow: here’s what Canadians are contributing to help Ukraine](https://www.thestar.com/news/canada/2022/03/02/cash-diapers-or-a-home-in-krakow-heres-what-canadians-are-contributing-to-help-ukraine.html)
+**一位51岁的老人**
+
+一位51岁的老人，于2002年与丈夫一起从莫斯科移民到加拿大，一直对弗拉基米尔·普京Vladimir Poutine持怀疑态度，正是由于俄罗斯总统，她当时决定离开这个国家。
+
+“爱你的国家，你的（国家的）文化，并自豪地谈论它（你的国家），是正常的” ，她说，但她认为从现在开始（让我）这样做太难了。
+
+**俄罗斯人，但反对普京 **
+
+**27岁的达里亚·西蒙诺娃（Darya Simonova）**
+
+27岁的达里亚·西蒙诺娃（Darya Simonova）最近几天也感到”羞耻”。
+
+“我非常难过”。
+
+“我希望魁北克人不要责怪我们（以及居住在魁北克的俄罗斯社区的俄罗斯人），并要求（魁北克）政府帮助乌克兰人”。这位女子，出生于西伯利亚，于2016年移民到加拿大，她反对普京政权。
+
+“最大的问题是我们不敢站起来（反抗）”，她还说。她强调，在最近反对俄罗斯战争的示威期间（俄罗斯）发生了大规模逮捕事件。我们的政府正在做的错误的事情，这不是我们的错，但是我们有责任，因为我们让（助长，没有制止）它发生。
+
+**名：瓦迪姆****Vadim，****姓氏：保密**
+
+瓦迪姆，他不想透露自己的姓氏，原因是他担心他的仍然在俄罗斯家人会遭到（俄罗斯政府）报复。
+
+“我担心（魁北克）人会怀疑我（对我怀有警惕和戒备之心），因为我是俄罗斯人”，他说。
+
+这位来自圣彼得堡地区Saint-Pétersbourg的40岁男子担心他将无法在俄罗斯再次见到他的家人，因为他不想（回到俄罗斯）成为俄罗斯军队的一员。
+
+日前，Gnews发表一篇题为《俄罗斯裔蒙特利尔人对普金入侵乌克兰的反应，[https://gnews.org/zh-hans/2093067/](https://gnews.org/zh-hans/2093067/)  》的文章报道，来自俄罗斯的蒙特利尔居民德米特里·别利亚伊科夫（Dmitry Belyaykov）说，这场战争不是俄罗斯和乌克兰之间的战争，而是“普京先生（本人）对俄罗斯人和乌克兰人的战争”。这篇文章还包括一个视频报道。在这段视频中，新闻主持人报道了前线记者（伊丽莎白·拉普兰特Elizabeth Laplante）采访两位俄罗斯裔蒙特利尔居民。
+
+**一旦中共武力侵占台湾，海外粉红有脸见人吗？**y
+
+**如果中共侵占台湾，世界各地的粉红们，应该如何回答记者的提问？**
+
+**新闻链接：**
+
+[Des Québécois nés en Russie «ont honte» de leur pays d’origine](https://www.tvanouvelles.ca/2022/02/26/des-quebecois-nes-en-russie-ont-honte-de-leur-pays-dorigine)
+
+在结束本文之前，让我们重温一下郭文贵先生2022年3月2日盖特视频透露的消息（[https://gettr.com/post/pxs37m0066](https://gettr.com/post/pxs37m0066) ）：
+
+***俄罗斯对乌克兰东南部做出无差别轰炸***
+
+***三个小时前，俄罗斯内部政治发生了急剧的变化***
+
+***连普京团队也开始发出不同声音***
+
+**世界各地的粉红们，听到了吗？醒醒吧。**
+
+
+
+**声明：**
+
+**由于语言和文化背景的不同，本文（或本视频）中对原文（或原视频）的翻译不能也不可能保证完全表达原文（或原视频）的内容。读者（或观众）要想了解确切的信息请参考下面链接指向的原文（或原视频）。本文（或本视频）内容仅代表作者个人观点，与发布本文（或本视频）任何媒体平台无关。本文（或本视频）作者：16626**
+
+
 
 **编辑：LILY**
 
-**发布：MQ**
-
-**校对：NIE**
+**发布：歪桑**
 
 20220303
 
