--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,44 +1,28 @@
 ---
-title: 俄军进行无差别攻击造成2000多平民死亡
+title: 文贵爆料03.03: 普京拟用大杀器， 48小时内灭 500万乌克兰人
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/2101309/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2101343/)
 
-**撰稿：温哥华圆成农场 文明志**
+撰稿：Skagen
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Screenshot-2022-03-03-at-20.15.08.png)Image：screenshot
+“现在普京要动用大杀器，甚至现在黑海舰队都要上了。听说要把整个乌克兰500万人，在未来的48小时消灭。”
 
-据3月3日读卖新闻驻莫斯科和华盛顿特派记者综合报道，2日，入侵乌克兰的俄罗斯军队袭击了哈尔科夫东部的大学和警察局。 对非军事设施的袭击开始增加，包括允许俄军导弹袭击首都基辅的电视塔。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-319.png)图片来源：[YOL読売新聞](https://www.yomiuri.co.jp/s/ims/RussiaUkraineKyiv/?from=yhd)
-从俄罗斯入侵开始，对居民区的破坏正在扩大，乌克兰政府2日宣布，已有2000多名平民在袭击中丧生。
+郭文贵先生今天盖特直播发出警告。普京遭到乌克兰智慧而顽强的抵抗，持续8天攻不下乌克兰让普“大帝”战略战术完全走形，居然要动用俄罗斯军队最后的“大杀器”。郭先生将这比作为“尿壶里的战争”，再怎么折腾，无法改变房子的结构，最后就是被干掉、被抛弃，干的越猛，死的越惨，只是死人多少的问题，这场俄乌大战的结局已经定了。
 
-据英国BBC等报道，2日哈尔科夫市中心的政府机关每天都受到导弹袭击。 有一种观点认为，其目的是使城市功能瘫痪。 市政府官员昨天宣布，在过去 24 小时内，已有 21 人死亡，112 人受伤。 还有消息称俄罗斯地面部队已进入该市。
+郭先生在上期大直播已经爆料，美国核实了俄罗斯在美资产高达17万亿美元，由极少数人垄断。许多俄罗斯大亨已经预感到要冻结他们在美国和欧洲的巨额资产。纷纷开始低价抛售在美欧价值5亿-10亿的游艇和房子。
 
-另据报道，俄军1日晚向基辅市电视塔发射了两枚导弹，这次袭击造成五人死亡，五人受伤，电视广播暂停播放。俄罗斯国防部2日在公告中承认了这次袭击，称“电视塔被毁，但房屋没有损坏”。俄罗斯国防部此举拟摧毁基辅的信息相关设施以应对跟乌克兰的信息战。 由此看来，今后俄军对乌克兰非军事设施的不分青红皂白的袭击可能会继续增加。
+郭先生补充说，这世界有很多牌没出呢，比如把俄罗斯经济命脉的石油、天然气让其停止生产和出口。
 
-基辅电视塔附近的一座纪念大屠杀（纳粹德国屠杀犹太人）遇难者设施也因袭击而受损。 乌克兰总统泽连斯基在推特上指责这是希特勒二战的“历史重演”，通过将普京与纳粹德国相提并论来批评普京的侵略。
+全世界想打的还有共产党的CIPS，即人民币跨境支付系统。美国用停用SWIFT系统对付，美元还是是西方的杀器。但郭先生说，这是最后一次，不会再有美元影响这个世界的时候了。二战诞生了布雷顿森林体系，这场战争将催生崭新的数字货币的金融时代，有稳定币和有锚定的数字币，才是真正人类的未来，而且不能是被垄断的，去中心化的技术，必须有锚定。他说，“这是很复杂的事，不是现在大家说的那么简单，人类大变了、世界大变了”。
 
-在日托米尔西部，2日，空军设施附近的几所房屋遭到轰炸，造成2人死亡，16人受伤。
+关于蓬佩奥和余茂春访问台湾后发生的事情，郭先生预测了共产党会出的招，预测之准确，又一次让世界震惊。第一，中间飞机可能会遇到故障，拦阻和威赫；第二，台湾会停电，因为台湾一停电，台积电就完了，而且说停就停，停电成为常态，让台湾社会大乱；第三，台湾的金融系统或台湾的几个科技系统，突然发现被盗、被黑客。郭先生说共产党玩流氓，永远是下三路，永远是老鼠走的路。共产党就是这副德行，永远是欺负弱的，怕硬的，永远是偷、蒙、拐、骗、黑，除了谎言就是谎言。
 
-俄罗斯军队也在攻击面向黑海的乌克兰南部。 五角大楼2日宣布，俄军已经“完全控制”了人口约30万的南部重要城市赫尔松市中心。 乌方对此予以否认，看来激战还在继续。
+但是郭先生说共产党这些招不能伤台湾多少，而“好戏毕竟已经登场，演员已不能退出，戏的最终结果，肯定是好人把坏人给干掉，中间只是代价多少”。而最后结果就是“坏人必将被处罚，什么普大帝、习太阳，什么中国共产党，去球的吧。”
 
-关于港口城市马里乌波尔的情况，市长向当地电视台解释说，“由于俄军不断的袭击，造成了很多人的伤亡”。
+来源：
 
-截至2日下午，对基辅的全面进攻尚未展开。 美国国防部一名高级官员昨天表示，俄罗斯军队在基辅以北约 25 公里处停滞不前。他还指出俄军缺乏燃料和食物，并表示俄军可能推迟了行进，以重新获得阵地。
+[2022.3.3 文贵盖特](https://gettr.com/post/pxzpvd8eb7)
 
-美国还表示，俄军在乌克兰周边集结的部队80%以上已被投入乌克兰。
-
-另一方面，2日俄罗斯和乌克兰的停火谈判无疾而终。在此之前，乌克兰总统泽连斯基先生表示，“只要轰炸还在发生，我们就不会对会谈作出回应”。
-
-**消息来源：
-**[Yahoo：都市機能マヒ狙うロシア、無差別攻撃増える可能性…ウクライナ政府「民間人２千人以上が死亡」](https://news.yahoo.co.jp/articles/5cbf58c216bd8d0af1a8c7fdbad9fe361f19b4e8)
-
-**编辑：LILY**
-
-**发布：MQ**
-
-20220303
-
-更多资讯请关注：
-[温哥华圆成农场GTV频道](https://gtv.org/user/5f30d3ff91d4727c6a88395d)｜[温哥华圆成农场官方盖特](https://www.gettr.com/user/himalayavang)｜[温哥华圆成农场Discord服务器](https://discord.gg/8RMGcwT8)
-![](https://assets.gnews.org/wp-content/uploads/2021/11/%E8%BE%B2%E5%A0%B4%E6%96%87%E5%AE%A3-3.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
