--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,7 +1,7 @@
 ---
-title: 台湾将是下一个亚洲金融帝国
+title: 俄罗斯打醒了欧洲大陆
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2110148/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2110191/)
 
 台灣寶島農場
 
