--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,11 +1,9 @@
 ---
-title: 至2021年底，18.7万人在接种中共病毒疫苗后20周内死亡
+title: 中共控制媒体不报导俄乌战争的中国公民新闻
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2110221/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2110283/)
 
-03/01/2022 哥大研究估计：至2021年底，18.7万人在接种中共病毒疫苗后20周内死亡。
-
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+台灣寶島農場
 
  
 
